--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,11 @@ h1{
     background-color: #ffffff;
 }
 
+.choix{
+    display: flex;
+    flex-direction: column;
+}
+
 .Fonctionnement h2{
    font-size: 1.2em;
    margin-left: 1.5em;
@@ -93,10 +98,12 @@ h1{
 
 
 .Fonctionnement .info{
+    background-color: #f6f6f6;
     text-align: center;
-    padding: 1.5em;
+    height: 4.5em;
+    padding: 0.5em;
     border: 1px solid  #f6f6f6;
-    margin: 2em;
+    margin: 0.5em 2em;
     border-radius: 1.5em;
     font-size: 1em;
     box-shadow: 0px 1px 3px 0px;
@@ -109,7 +116,7 @@ h1{
 
 .Fonctionnement .info:hover{
     transform: scale(1.02);
-    background-color: rgb(147,86,220,0.2);
+    background-color: rgb(147,86,220,0.1);
 }
 
 .Fonctionnement .info:hover .fa-solid{
@@ -117,12 +124,8 @@ h1{
 }
 
 .Fonctionnement i{
-    margin-right: auto;
+    margin-right:1em;
     color:grey;
-}
-
-.Fonctionnement p{
-    margin-right: auto;
 }
 
 .Fonctionnement .numero_info{
@@ -270,30 +273,34 @@ footer i{
 }
 
 
-/*responsives accueil*/
-@media screen and (min-width= 768px){
+/*responsives oh my food*/
+
+@media screen and (min-width: 768px){
+    .Fonctionnement{
+        height: auto;
+        margin-bottom: 2em;
+        }
+    .Fonctionnement h2{
+        margin-left: 1em;
+    }
     .info{
-        margin:0.5em;
+        width: 60%;
+
+        font-weight: 100;
     }
     .choix{
         display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding-bottom: 2em;
     }
-}
-@media screen and (min-width= 992px){
-
-    .card_menu{
-        width: 45%;
-        height: auto;
+    .Fonctionnement i{
+        margin-right: 0.5em;
     }
-    .img_menu{
-        width: 100%;
+    .Fonctionnement .numero_info{
+        left: -20px;    
     }
-
-   .bloc_menus1{
-        display: flex;
-        width: 95%;
-   }
-
+  
 }
 
 
@@ -395,9 +402,8 @@ main{
 .group_repas:hover .detail_check{ 
     margin-right: 0;
     transform: scale(1.05);
-    cursor: pointer;
+    
 }  
-
 
 .detail_check i{
     display: flex;
@@ -409,21 +415,21 @@ main{
     background-color: #ffffff;
     border-radius: 60%;
     color:  #99E2Dc;
-
 }
 
-.group_repas:hover .detail_check i{
-    animation-name: rotatecheck 1s ease-in-out;
+.group_repas:hover i{
+    animation: rotatechek 5s linear;
 }
 
-@keyframes rotatecheck {
+@keyframes rotatecheck{
     0%{
-        transform: rotate(-270dg);
+        transform: rotate(270deg);
     }
     100%{
         transform: rotate(0);
     }
 }
+
 /*commande*/
 .commande{
     height: 5em;
@@ -445,12 +451,7 @@ main{
     
 
 /*responsives à la française*/
-@media screen and (max-width= 768px){
-    
 
-}
-@media screen and (max-width= 992px){
     
 
 
-}
